Fixed background logo alignment

--- a/web_static/styles/3-header.css
+++ b/web_static/styles/3-header.css
@@ -1,7 +1,7 @@
 header {
     background-color: white;
     background-image: url("../images/logo.png");
-    background-position: 20px center;
+    background-position: 20px left;
     height: 70px;
     width: 100%;
     border-bottom-style: solid;
